// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navigation should render correctly when the current step is 1 1`] = `
<div>
  <div
    id="recipe-steps"
  />
  <div
    class="sc-AykKH hoxMSq sc-fzXfLO fZNNwI"
    direction="horizontal"
    width="100%"
  >
    <button
      aria-controls="recipe-steps"
      class="sc-AykKC sc-fzXfLP jsjRWT"
      tabindex="-1"
    >
      back
    </button>
    <button
      aria-controls="recipe-steps"
      class="sc-AykKC jJKHJl"
      width="100%"
    >
      Ingredients
      <img
        alt=""
        class="sc-fzXfLQ jNZvTh"
        src="right_chevron_white.svg"
      />
    </button>
  </div>
</div>
`;

exports[`Navigation should render correctly when the current step is 2 1`] = `
<div>
  <div
    id="recipe-steps"
  />
  <div
    class="sc-AykKH hoxMSq sc-fzXfLO fZNNwI"
    direction="horizontal"
    width="100%"
  >
    <button
      aria-controls="recipe-steps"
      class="sc-AykKC sc-fzXfLP hDlhqV"
    >
      back
    </button>
    <button
      aria-controls="recipe-steps"
      class="sc-AykKC jJKHJl"
      width="100%"
    >
      Items
      <img
        alt=""
        class="sc-fzXfLQ jNZvTh"
        src="right_chevron_white.svg"
      />
    </button>
  </div>
</div>
`;

exports[`Navigation should render correctly when the current step is 3 1`] = `
<div>
  <div
    id="recipe-steps"
  />
  <div
    class="sc-AykKH hoxMSq sc-fzXfLO fZNNwI"
    direction="horizontal"
    width="100%"
  >
    <button
      aria-controls="recipe-steps"
      class="sc-AykKC sc-fzXfLP hDlhqV"
    >
      back
    </button>
    <button
      aria-controls="recipe-steps"
      class="sc-AykKC jJKHJl"
      width="100%"
    >
      Preparation
      <img
        alt=""
        class="sc-fzXfLQ jNZvTh"
        src="right_chevron_white.svg"
      />
    </button>
  </div>
</div>
`;
